@@ -1,7 +1,8 @@
 ---------------------------------------------------------------------------------------------------
 Version: 0.2.4
 Date: ????
-  Changes:
+  Bugfixes:
+    - Should no longer accidentally wipe the blocked list when an item that has blocked items from calculating finishes calculating
 ---------------------------------------------------------------------------------------------------
 Version: 0.2.3
 Date: 2024-05-28
